# Stress-Testing-Engine-Regime-Change-

./: .gitignore  CMakeLists.txt  README.md
include/core/: arima.h  backtester.h  black_scholes.h  market_data.h  monte_carlo.h  portfolio.h  statistical_tests.h  types.h
include/execution/: execution_engine.h
include/live/: live_data_feed.h
include/regime/: hidden_markov_model.h  regime_detector.h
include/strategies/: options_strategies.h  strategy_manager.h
include/stress/: historical_scenarios.h  scenario_generator.h  stress_engine.h
include/utils/: csv_parser.h  json_writer.h  math_utils.h
include/visualization/: data_broadcaster.h  web_server.h
results/: rolling_backtest_results.csv
scripts/: gen_combined_dashboard.py  gen_regime_3d.py  generate_extra_visualizations.py  generate_visualizations.py  rolling_backtest.py
src/: main.cpp
src/core/: arima.cpp  backtester.cpp  black_scholes.cpp  market_data.cpp  monte_carlo.cpp  portfolio.cpp  statistical_tests.cpp
src/execution/: execution_engine.cpp
src/live/: live_data_feed.cpp
src/regime/: hidden_markov_model.cpp  regime_detector.cpp
src/strategies/: options_strategies.cpp  strategy_manager.cpp
src/stress/: historical_scenarios.cpp  scenario_generator.cpp  stress_engine.cpp
src/utils/: csv_parser.cpp  json_writer.cpp  math_utils.cpp
src/visualization/: data_broadcaster.cpp  web_server.cpp
tests/: test_main.cpp
